--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ DerivedData/
 timeline.xctimeline
 playground.xcworkspace
 
+## macOS
+.DS_Store
+
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
@@ -44,7 +47,7 @@ playground.xcworkspace
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
@@ -88,3 +91,11 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# VSCode
+.vscode
+.aider*
+.env
+
+# Websites deployment folder
+Websites
