--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -62,7 +62,23 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.artifact-path }}/${{ inputs.project-name }}
+          path: ${{ inputs.artifact-path }}
+      
+      - name: Extract artifact if zipped
+        run: |
+          artifact_path="${{ inputs.artifact-path }}"
+          project_name="${{ inputs.project-name }}"
+          
+          # Check if artifact is a zip file
+          if [ -f "${artifact_path}/${project_name}.zip" ]; then
+            echo "📦 Extracting ${project_name}.zip..."
+            cd "${artifact_path}"
+            unzip -q "${project_name}.zip"
+            rm "${project_name}.zip"
+            echo "✅ Extraction complete"
+          else
+            echo "ℹ️ No zip file found, assuming directory artifact"
+          fi
       
       - name: Deploy to Cloudflare Pages
         id: cloudflare
