fix: remove docs-21-dev- prefix from target names in generate-markdown workflow

--- a/.github/workflows/generate-markdown.yml
+++ b/.github/workflows/generate-markdown.yml
@@ -41,7 +41,7 @@ jobs:
           target_args=""
           
           for target in $targets; do
-            target_args="$target_args --target docs-21-dev-$target"
+            target_args="$target_args --target $target"
           done
           
           echo "target-args=$target_args" >> $GITHUB_OUTPUT
