feat: add sitemap generation and robots.txt for all subdomains with content-signal support
Add automated sitemap generation to DocC and markdown workflows using state-based lastmod tracking. Generate sitemaps for docs.21.dev (HTML documentation) and md.21.dev (markdown files) with URL discovery and XML formatting. Add sitemap verification to build workflow for 21-dev subdomain.

Implement standardized robots.txt files across all three subdomains (21.dev, docs.21.dev, md.21.dev) with explicit content-signal declarations

--- a/.github/workflows/build-slipstream.yml
+++ b/.github/workflows/build-slipstream.yml
@@ -106,6 +106,15 @@ jobs:
             exit 1
           fi
           
+          # Verify sitemap.xml exists (for 21-dev)
+          if [ "$website" = "21-dev" ]; then
+            if [ ! -f "Websites/${website}/sitemap.xml" ]; then
+              echo "Error: sitemap.xml not found for 21-dev"
+              exit 1
+            fi
+            echo "✅ Sitemap sitemap.xml found"
+          fi
+          
           # Verify CSS files exist - check for compiled CSS files
           css_found=false
           
