--- a/.github/workflows/build-slipstream.yml
+++ b/.github/workflows/build-slipstream.yml
@@ -100,37 +100,27 @@ jobs:
           echo "Checking build output..."
           ls -la Websites/${website}/
           
-          # Verify index.html exists
-          if [ ! -f "Websites/${website}/index.html" ]; then
-            echo "Error: index.html not found in build output"
-            exit 1
-          fi
+          declare -a required_files=(
+            "Websites/${website}/index.html"
+            "Websites/${website}/_headers"
+            "Websites/${website}/static/style.css"
+            "Websites/${website}/sitemap.xml"
+          )
           
-          # Verify sitemap.xml exists (for 21-dev)
-          if [ "$website" = "21-dev" ]; then
-            if [ ! -f "Websites/${website}/sitemap.xml" ]; then
-              echo "Error: sitemap.xml not found for 21-dev"
-              exit 1
+          missing=()
+          for path in "${required_files[@]}"; do
+            if [ ! -f "$path" ]; then
+              missing+=("$path")
             fi
-            echo "✅ Sitemap sitemap.xml found"
-          fi
+          done
           
-          # Verify CSS files exist - check for compiled CSS files
-          css_found=false
-          
-          # Look for any compiled CSS files that should exist
-          if find "Websites/${website}" -name "style.css" -path "*/static/style.css" | grep -q .; then
-            css_found=true
-            echo "Found compiled CSS files:"
-            find "Websites/${website}" -name "style.css" -path "*/static/style.css"
-          fi
-          
-          if [ "$css_found" = false ]; then
-            echo "Error: No compiled CSS files found in build output"
-            echo "Expected at least one file matching: Websites/${website}/*/static/style.css"
+          if [ ${#missing[@]} -gt 0 ]; then
+            echo "Error: Missing required build artifacts:"
+            printf ' - %s\n' "${missing[@]}"
             exit 1
           fi
           
+          echo "✅ Required files present"
           echo "✅ Build output verified successfully"
       
       - name: Upload build artifacts
