--- a/.github/workflows/DOCS-21-DEV.yml
+++ b/.github/workflows/DOCS-21-DEV.yml
@@ -13,6 +13,7 @@ on:
       - '.github/workflows/generate-docc.yml'
       - '.github/workflows/deploy-cloudflare.yml'
       - '.github/workflows/DOCS-21-DEV.yml'
+      - 'Resources/docs-21-dev/**'
       - 'Package.swift'
       - 'Package.resolved'
   
