refactor: split _headers into environment-specific files with branch-based selection in build workflows (#16)
Split monolithic _headers files into separate .prod and .dev variants for all three subdomains (21-dev, docs-21-dev, md-21-dev). Add branch-based header selection logic to build-slipstream, generate-docc, and generate-markdown workflows that copies _headers.prod for main branch builds and _headers.dev for preview builds. Production headers include HSTS and allow search indexing, while preview headers omit.

--- a/.github/workflows/build-slipstream.yml
+++ b/.github/workflows/build-slipstream.yml
@@ -44,6 +44,28 @@ jobs:
       - name: Generate site
         run: swift run ${{ inputs.website }}
       
+      - name: Select environment-specific headers
+        run: |
+          website="${{ inputs.website }}"
+          resources_dir="Resources/${website}"
+          output_dir="Websites/${website}"
+          
+          if [ "${{ github.ref }}" = "refs/heads/main" ]; then
+            echo "🔒 Production build: using _headers.prod"
+            header_source="${resources_dir}/_headers.prod"
+          else
+            echo "🔓 Preview build: using _headers.dev"
+            header_source="${resources_dir}/_headers.dev"
+          fi
+          
+          if [ ! -f "$header_source" ]; then
+            echo "❌ Error: Header file not found: $header_source"
+            exit 1
+          fi
+          
+          cp "$header_source" "${output_dir}/_headers"
+          echo "✅ Copied $header_source → ${output_dir}/_headers"
+      
       - name: Compile Tailwind CSS
         run: |
           website="${{ inputs.website }}"
