feat: add canonical URL support to BasePage and normalize sitemap URLs to match Cloudflare Pages redirects
Add optional canonicalURL parameter to BasePage initializers and render canonical link tags in HTML head. Update Homepage, BlogListingPage, BlogPostPage, and P256KPage to specify canonical URLs with trailing slashes matching Cloudflare Pages URL normalization.

Modify sitemap generation in generate-docc workflow to strip /index.html suffixes and replace with trailing slashes, ensuring sitemap URLs match canonical

--- a/.github/workflows/generate-docc.yml
+++ b/.github/workflows/generate-docc.yml
@@ -169,8 +169,9 @@ jobs:
           
           # Find all HTML files under documentation/ directory and generate URL entries
           find "${output_dir}/documentation" -name "*.html" -type f | sort | while read -r file; do
-            # Convert file path to URL path
-            url_path=$(echo "$file" | sed "s|^${output_dir}/||")
+            # Convert file path to URL path, stripping index.html for canonical URLs
+            # (Cloudflare Pages redirects /path/index.html → /path/)
+            url_path=$(echo "$file" | sed -e "s|^${output_dir}/||" -e 's|/index\.html$|/|')
             
             # Build absolute URL (docs.21.dev subdomain)
             url="https://docs.21.dev/${url_path}"
