feat: add canonical URL validation and fixing utilities with CLI commands and workflow integration
Add CanonicalChecker and CanonicalFixer utilities using SwiftSoup for HTML parsing to validate and fix canonical link tags across all generated HTML output. Implement site-agnostic design that works on any subdomain (21.dev, docs.21.dev, md.21.dev) post-generation.

Add `util canonical check` command that reports missing, valid, and mismatched canonical URLs with three-category output.

--- a/.github/workflows/generate-docc.yml
+++ b/.github/workflows/generate-docc.yml
@@ -221,6 +221,29 @@ jobs:
             exit 1
           fi
       
+      - name: Fix canonical URLs
+        run: |
+          project="${{ inputs.project-name }}"
+          output_dir="Websites/${project}"
+          # Derive base URL: docs-21-dev → https://docs.21.dev
+          BASE_URL="https://${project//-/.}"
+          
+          echo "🔗 Fixing canonical URLs for ${project}..."
+          echo "   Base URL: $BASE_URL"
+          echo "   Path: $output_dir"
+          
+          # Fix missing canonical tags
+          swift run util canonical fix \
+            --path "$output_dir" \
+            --base-url "$BASE_URL"
+          
+          # Verify all canonicals are valid
+          swift run util canonical check \
+            --path "$output_dir" \
+            --base-url "$BASE_URL"
+          
+          echo "✅ Canonical URLs fixed and verified"
+      
       - name: Create documentation archive
         run: |
           project="${{ inputs.project-name }}"
