ci: add framework and utility source paths to docs-21-dev workflow triggers
Add Sources/docs-21-dev-P256K/**, Sources/docs-21-dev-ZKP/**, Sources/Utilities/**, and Sources/util/** to workflow path filters. Ensures documentation workflow triggers when framework source files or utility tooling changes that affect documentation generation.

--- a/.github/workflows/DOCS-21-DEV.yml
+++ b/.github/workflows/DOCS-21-DEV.yml
@@ -14,6 +14,10 @@ on:
       - '.github/workflows/deploy-cloudflare.yml'
       - '.github/workflows/DOCS-21-DEV.yml'
       - 'Resources/docs-21-dev/**'
+      - 'Sources/docs-21-dev-P256K/**'
+      - 'Sources/docs-21-dev-ZKP/**'
+      - 'Sources/Utilities/**'
+      - 'Sources/util/**'
       - 'Package.swift'
       - 'Package.resolved'
   
