--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ playground.xcworkspace
 .build/
 Websites/
 
+# Auto-generated CSS (created by renderSitemap during site generation)
+**/style.input.css
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
