refactor: rename Utilities library to UtilLib and update all references across project (#28)
Rename Utilities library target to UtilLib for consistency with util executable naming. Update all imports and dependencies across Package.swift, workflow files, and source code. Add util-architecture.md documentation explaining library + executable pattern with ArgumentParser placement rationale and testing architecture (UtilLibTests for unit tests, UtilIntegrationTests for black-box CLI testing).

--- a/.github/workflows/DOCS-21-DEV.yml
+++ b/.github/workflows/DOCS-21-DEV.yml
@@ -16,7 +16,7 @@ on:
       - 'Resources/docs-21-dev/**'
       - 'Sources/docs-21-dev-P256K/**'
       - 'Sources/docs-21-dev-ZKP/**'
-      - 'Sources/Utilities/**'
+      - 'Sources/UtilLib/**'
       - 'Sources/util/**'
       - 'Package.swift'
       - 'Package.resolved'
