feat: add commit change detection to reset stale deployment statuses across subdomains
Update CommentService.mergeDeployment to accept newCommit parameter and reset other subdomains to pending status when commit SHA changes. Add resetOtherDeployments helper that clears preview URLs while preserving fixed alias URLs for stale deployments.

Update workflow to use github.event.pull_request.head.sha instead of github.sha for accurate PR commit tracking. Shorten displayed commit hash to 7 characters.

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -98,7 +98,7 @@ jobs:
             --status ${{ steps.cloudflare.outcome == 'success' && 'success' || 'failure' }} \
             --preview-url "${{ steps.cloudflare.outputs.url }}" \
             --alias-url "${{ steps.cloudflare.outputs.alias }}" \
-            --commit "${{ github.sha }}" \
+            --commit "${{ github.event.pull_request.head.sha }}" \
             --run-url "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
       
       - name: Deployment complete
